<resources>
    <string name="app_name">SIGNAL</string>
    <string name="title_activity_login">로그인</string>

    <!-- Strings related to login -->
    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_join_in">회원가입</string>
    <string name="error_invalid_id">This ID is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="checkbox_remember">Remember login</string>
    <string name="find_id">아이디찾기</string>
    <string name="find_pw">비밀번호찾기</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- For Bottom Bar -->
    <string name="title_home">Home</string>
    <string name="title_mypage">MyPage</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>

    <!-- For Facebook Login -->
    <string name="facebook_app_id">537958343216334</string>
    <string name="fb_login_protocol_scheme">fb537958343216334</string>

    <!-- For Kakao Login -->
    <string name="kakao_app_key">e79acd7470c135a33679ca38d3e0fefe</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Meeting Detail -->
    <string name="applicant_name">이름</string>
    <string name="applicant_job">직업</string>
    <string name="applicant_phone">전화번호</string>
    <string name="applicant_message">두근거리는 한마디</string>

    <!-- Send Signal -->
    <string name="send_signal_info">마음을 전해보세요</string>
    <string name="send_signal_title">두근 거리는 마음을 한마디로 표현해 주세요</string>
    <string name="send_signal_content">만나고 싶은 이유와 하고싶은 이야기를 남겨주세요</string>
    <string name="send_signal_button">전달하기</string>


</resources>
