<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.androidtown.mysignalapplication.SendSignalActivity">

    <LinearLayout
        android:layout_width="351dp"
        android:layout_height="501dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="-103dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/send_signal_info"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="34dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/boxtheme"
            android:layout_marginTop="24dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:theme="@style/Texttheme">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/send_signal_title" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="horizontal"
            android:background="@drawable/boxtheme"
            android:layout_marginTop="16dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="296dp"
                android:theme="@style/Texttheme">

                <EditText
                    android:id="@+id/editText2"
                    android:layout_width="match_parent"
                    android:layout_height="282dp"
                    android:ems="10"
                    android:gravity="top"
                    android:hint="@string/send_signal_content"
                    android:inputType="textMultiLine" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/send_signal_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_signal_button"
            android:textColor="@color/colorPrimary"
            android:background="@color/login_button_color"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
